<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh_quote"
        android:icon="@drawable/round_refresh_24"
        android:title="Refresh"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/clear_history"
        android:icon="@drawable/twotone_auto_delete_24"
        android:title="Clear"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/open_settings"
        android:icon="@drawable/twotone_settings_24"
        android:title="Settings"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />
</menu>