...
                                android:text='@{data.randomQuote.author == "" ? "Loading" : data.randomQuote.author}'
                                android:textAlignment="textEnd" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:id="@+id/shareQuote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_gravity="bottom|start"
                        app:icon="@drawable/twotone_share_24"
                        app:iconPadding="5dp" />
...
                    android:visibility="@{data.quotes.results.size() == 0 ? View.GONE : View.VISIBLE}"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/quoteRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:visibility="@{data.quotes.results.size() == 0 ? View.GONE : View.VISIBLE}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
...
